# Matter-Lock-with-HomeKey-ESP32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
.github/workflows/: ci.yml
components/DigitalDoorKey/: CMakeLists.txt
components/DigitalDoorKey/include/: DDKAuthContext.h
components/DigitalDoorKey/priv/: TLV8.hpp
components/DigitalDoorKey/src/: HK_HomeKit.cpp
components/DigitalDoorKey/src/auth/: AuthContext.cpp
components/HomeSpan/: CMakeLists.txt
components/HomeSpan/upstream/src/: Utils.cpp
components/HomeSpan/upstream/src/src/extras/: PwmPin.cpp  RFControl.cpp  StepperControl.cpp
components/fmt/: CMakeLists.txt
components/fmt/include/fmt/: format.h
components/homekey_provisioning_core/: CMakeLists.txt  homekey_boot_mode_manager.cpp  homekey_factory_data.cpp  homekey_provisioning_manager.cpp  homekey_reader_data_manager.cpp
components/homekey_provisioning_core/include/: homekey_boot_mode_manager.h  homekey_factory_data.h  homekey_provisioning_manager.h  homekey_reader_data_manager.h
components/homespan_port/: CMakeLists.txt  span_rollback_stub.cpp
components/loggable/: CMakeLists.txt
components/pn532_cxx/: CMakeLists.txt
components/pn532_hal/: CMakeLists.txt
components/web_config/: CMakeLists.txt  web_config.cpp
components/web_config/include/: web_config.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_priv.h
main/homekey/: PROVISIONING_PLAN.md  homekey_console.cpp  homekey_manager.cpp  homekey_manager.h  homekey_nfc_manager.cpp  homekey_nfc_manager.h
main/lock/: door_lock_callbacks.cpp  door_lock_manager.cpp
provisioner/: CMakeLists.txt  README.md  flash_to_ota1.sh  partitions.csv  sdkconfig.defaults
provisioner/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
tools/: generate_homekey_factory_nvs.py
